--- a/.gitignore
+++ b/.gitignore
@@ -132,4 +132,4 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/12206-codestream
 .idea/codestream.xml
 
-# End of https://www.toptal.com/developers/gitignore/api/webstorm,macos
+# End of https://www.toptal.com/developers/gitignore/api/webstorm,macos.DS_Store
